Попытка исправить поле через фиксированную высоту
https://stackoverflow.com/questions/31469744/padding-of-text-input-in-internet-explorer-11-does-not-work-as-expected

--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ input[type="text"].visually-hidden {
 
 .search-field {
   width: 441px;
+  height: 49px;
   padding: 9px 85px 8px 39px;
 
   font: inherit;
