--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ input[type="text"].visually-hidden {
 .search-field {
   width: 441px;
   height: 49px;
-  padding: 9px 85px 8px 39px;
+  padding: 0 85px 0 39px;
 
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 15px;
