Убирает дефолтный в IE крестик отмены ввода

--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,10 @@ input[type="text"].visually-hidden {
   border-bottom: 2px solid transparent;
 }
 
+.search-field::-ms-clear {
+    display:none;
+}
+
 .search-field:focus {
   border-bottom-color: #000000;
 }
