Попытка убрать баг с появлением placeholder над полем ввода при клике (active) по полю

--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,10 @@ input[type="text"].visually-hidden {
   color: #000000;
 }
 
+.search-field:active::placeholder {
+  display: none;
+}
+
 .search-form-button {
   position: absolute;
   right: 0;
