Убирает сокрытие модалок, чтобы можно было потестить

--- a/css/style.css
+++ b/css/style.css
@@ -2321,9 +2321,9 @@ input[type="text"].visually-hidden {
 
 /* Модальные окна */
 
-.modal {
+/* .modal {
   display: none;
-}
+} */
 
 .modal {
   position: relative;
