--- a/css/style.css
+++ b/css/style.css
@@ -2306,10 +2306,10 @@ input[type="text"].visually-hidden {
 .signature {
   position: absolute;
   bottom: -2px;
-  right: 0;
+  right: -2px;
 
   display: block;
-  width: 27px;
+  width: 29px;
   height: 35px;
 
   overflow: hidden;
