Revert "Попытка исправить обрезание логотипа Академии в IE11"
This reverts commit fdf429c071b603cd661cf2153ddd50d19a8de5cf.

--- a/css/style.css
+++ b/css/style.css
@@ -2306,10 +2306,10 @@ input[type="text"].visually-hidden {
 .signature {
   position: absolute;
   bottom: -2px;
-  right: -2px;
+  right: 0;
 
   display: block;
-  width: 29px;
+  width: 27px;
   height: 35px;
 
   overflow: hidden;
