--- a/css/style.css
+++ b/css/style.css
@@ -2344,21 +2344,74 @@ input[type="text"].visually-hidden {
 
 /* Модальные окна */
 
-.modal {
-  display: none;
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
 .modal {
-  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+
+  display: none;
+  margin-left: -480px;
+  margin-top: -275px;
 
   -webkit-box-sizing: border-box;
 
           box-sizing: border-box;
   width: 960px;
 
+  background-color: #ffffff;
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.7);
 
           box-shadow: 0 10px 10px rgba(0, 0, 0, 0.7);
+}
+
+.modal-show {
+  display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .modal-close {
@@ -2508,5 +2561,9 @@ input[type="text"].visually-hidden {
 }
 
 .modal-map img {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+
   display: block;
 }
